# llm-council

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  council-critique-report.md  council-review-output.md  pyproject.toml
.claude/: council-config.json
.claude/commands/: council.md
.claude/skills/council/: SKILL.md
.claude/skills/council/.claude-plugin/: marketplace.json  plugin.json
.claude/skills/council/commands/: council.md
.claude/skills/council/scripts/: council.py  progress.py
.github/workflows/: ci.yml  publish.yml
.kiro/specs/poe-api-migration/: design.md  requirements.md  tasks.md
backend/: config.py  council.py  poe.py
docs/: GAPS.md  TROUBLESHOOTING.md  optimization-baseline.md
docs/examples/: config-custom-prompts.json  config-mixed.json  config-openrouter.json  custom_provider.py  programmatic_usage.py
docs/examples/council-self-review/: 689b624a-47ac-484f-8761-bdc689f6868b.jsonl  README.md  output.md
docs/examples/prompts/: README.md  ranking-system.md  ranking-user.md  synthesis-system.md  synthesis-user.md
logs/: 1552d591-d6c5-4f85-8d51-012e899786dd.jsonl  a90e4834-5bc9-484e-a230-68c8acfabc61.jsonl  d40859be-05a8-47d8-bb39-ab7ce2b39141.jsonl
skills/council/: SKILL.md
skills/council/config/: council-config.json
skills/council/scripts/: council.py
src/llm_council/: __init__.py  _token_estimation.py  aggregation.py  budget.py  cache.py  cli.py  context.py  cost.py  council.py  defaults.py  flattener.py  formatting.py  manifest.py  models.py  parsing.py  persistence.py  progress.py  prompts.py  run_options.py  security.py  stages.py
src/llm_council/providers/: __init__.py  bedrock.py  openrouter.py  poe.py
src/llm_council/stages/: __init__.py  execution.py  stage1.py  stage2.py  stage3.py
tests/: conftest.py  test_aggregation.py  test_audit_fixes.py  test_budget.py  test_cache.py  test_cache_properties.py  test_cli.py  test_cli_cache.py  test_config.py  test_context.py  test_council_integration.py  test_docs_properties.py  test_execution_invariants.py  test_flattener.py  test_formatting.py  test_golden_outputs.py  test_graceful_shutdown.py  test_improvements.py  test_openrouter.py  test_parsing.py  test_parsing_chaos.py  test_persistence.py  test_progress.py  test_providers.py  test_resilience.py  test_security.py  test_stages.py  test_stream_model.py  test_streaming.py  test_streaming_integration.py  test_streaming_properties.py
