[project]
name = "llm-council"
version = "0.1.0"
description = "Multi-model LLM deliberation with anonymized peer review"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv~=1.0.0",
    "httpx~=0.27.0",
    "pydantic~=2.9.0",
    "fastapi-poe>=0.0.79",
    "boto3>=1.34",
    "tenacity>=8.2",
    "rich>=13.0",
    "tiktoken>=0.7",
    "pathspec~=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
llm-council = "llm_council.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["llm_council"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
